ENH: EMSegment - Added workflow steps
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14719 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentModule.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentModule.ui
@@ -7,171 +7,15 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>269</height>
+    <height>319</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_3">
-   <item>
-    <widget class="ctkCollapsibleButton" name="CTKCollapsibleButton">
-     <property name="text">
-      <string>Wizzard</string>
-     </property>
-     <property name="contentsFrameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2">
-      <item>
-       <widget class="QStackedWidget" name="PanelStack">
-        <property name="currentIndex">
-         <number>-1</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>167</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string>Test panels</string>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QComboBox" name="TestPanelsComboBox">
-        <item>
-         <property name="text">
-          <string>DefineTask</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>DefineInputChannels</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>DefineAnatomicalTree</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>DefineAtlas</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>EditRegistrationParameters</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>DefinePreprocessing</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>SpecifyIntensityDistribution</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>EditNodeBasedParameters</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>RunSegmentation</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QPushButton" name="BackButton">
-         <property name="text">
-          <string>&lt; Back</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="NextButton">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="text">
-          <string>Next &gt;</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="SegmentButton">
-         <property name="text">
-          <string>Segment</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="CancelButton">
-         <property name="text">
-          <string>Cancel</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="HelpButton">
-         <property name="text">
-          <string>Help</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </item>
-  </layout>
+  <layout class="QGridLayout" name="gridLayout"/>
  </widget>
  <customwidgets>
-  <customwidget>
-   <class>ctkCollapsibleButton</class>
-   <extends>QWidget</extends>
-   <header>ctkCollapsibleButton.h</header>
-   <container>1</container>
-  </customwidget>
   <customwidget>
    <class>qSlicerWidget</class>
    <extends>QWidget</extends>
