--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefinePreprocessingPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefinePreprocessingPanel.ui
@@ -6,18 +6,58 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>567</width>
-    <height>501</height>
+    <width>422</width>
+    <height>199</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QGroupBox" name="CheckListGroupBox">
+   <property name="geometry">
+    <rect>
+     <x>9</x>
+     <y>9</y>
+     <width>405</width>
+     <height>137</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Check List</string>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <widget class="QLabel" name="NoPreprocessingDefinedLabel">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>There is no preprocessing defined for this task.</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+      <property name="indent">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <customwidgets>
   <customwidget>
    <class>qSlicerEMSegmentWidget</class>
-   <extends>qSlicerWidget</extends>
+   <extends>QWidget</extends>
    <header>qSlicerEMSegmentWidget.h</header>
    <container>1</container>
   </customwidget>
