--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentEditNodeBasedParametersPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentEditNodeBasedParametersPanel.ui
@@ -14,6 +14,12 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QGroupBox" name="AnatomicalTreeGroupBox">
      <property name="title">
