--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLVolumeThresholdWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLVolumeThresholdWidget.ui
@@ -6,50 +6,51 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>381</width>
-    <height>137</height>
+    <width>300</width>
+    <height>61</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QGridLayout" name="gridLayout">
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <item row="0" column="0">
+    <widget class="QLabel" name="ThresholdLabel">
+     <property name="text">
+      <string>Threshold: </string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="AutoManualComboBox">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Threshold: </string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="AutoManualComboBox">
-         <item>
-          <property name="text">
-           <string>Manual</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Auto</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Off</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-      </layout>
+      <property name="text">
+       <string>Manual</string>
+      </property>
      </item>
      <item>
-      <widget class="ctkRangeWidget" name="VolumeThresholdRangeWidget"/>
+      <property name="text">
+       <string>Auto</string>
+      </property>
      </item>
-    </layout>
+     <item>
+      <property name="text">
+       <string>Off</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="ctkRangeWidget" name="VolumeThresholdRangeWidget"/>
    </item>
   </layout>
  </widget>
