--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLWindowLevelWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLWindowLevelWidget.ui
@@ -6,53 +6,84 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>381</width>
-    <height>137</height>
+    <width>300</width>
+    <height>60</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QGridLayout" name="gridLayout">
+   <property name="margin">
+    <number>0</number>
+   </property>
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="WindowLevelLabel">
+     <property name="text">
+      <string>Window/Level: </string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2" colspan="2">
+    <widget class="QComboBox" name="AutoManualComboBox">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Window/Level: </string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="AutoManualComboBox">
-         <item>
-          <property name="text">
-           <string>Manual</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Auto</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-      </layout>
+      <property name="text">
+       <string>Manual</string>
+      </property>
      </item>
      <item>
-      <widget class="ctkRangeWidget" name="WindowLevelRangeWidget"/>
+      <property name="text">
+       <string>Auto</string>
+      </property>
      </item>
-    </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QDoubleSpinBox" name="WindowSpinBox">
+     <property name="prefix">
+      <string>W: </string>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <double>10.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="ctkDoubleRangeSlider" name="WindowLevelRangeSlider">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QDoubleSpinBox" name="LevelSpinBox">
+     <property name="prefix">
+      <string>L: </string>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <double>10.000000000000000</double>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>ctkRangeWidget</class>
+   <class>ctkDoubleRangeSlider</class>
    <extends>QWidget</extends>
-   <header>ctkRangeWidget.h</header>
+   <header>ctkDoubleRangeSlider.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
